[project]
name = "watchtower-maintenance-platform"
version = "0.1.0"
description = "Centralized repository maintenance, SBOM, vulnerability, VEX, and remediation platform."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "boto3>=1.34",
  "fastapi>=0.111",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.3",
  "pygithub>=2.3",
  "python-jose[cryptography]>=3.3",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["api*", "worker*"]
exclude = ["frontend*", "migrations*", "scripts*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
